--- a/server/Makefile
+++ b/server/Makefile
@@ -13,11 +13,12 @@ INCLUDE_DIR = include
 TARGET = Pacmanist
 
 # Objects variables
-OBJS = game.o display.o board.o
+OBJS = game.o display.o board.o api.o 
 
 # Dependencies
 display.o = display.h
 board.o = board.h
+api.o = api.h
 
 # Object files path
 vpath %.o $(OBJ_DIR)
